# oop-2024

./: CMakeLists.txt  keyboard_settings.txt  Павлов ООП 3.docx
src/: Cell.cpp  Cell.h  GameBoard.cpp  GameBoard.h  GameController.cpp  GameController.h  Ship.cpp  Ship.h  ShipManager.cpp  ShipManager.h  SkillManager.cpp  SkillManager.h  main.cpp
src/Exceptions/: AttackCoordsException.cpp  AttackCoordsException.h  ShipException.cpp  ShipException.h  SkillException.cpp  SkillException.h
src/Factories/: BombingFactory.cpp  BombingFactory.h  DoubleDamageFactory.cpp  DoubleDamageFactory.h  ISkillFactory.h  ScannerFactory.cpp  ScannerFactory.h
src/Game/: Game.cpp  Game.h  GameController.cpp  GameController.h  GameSettings.cpp  GameSettings.h  GameState.cpp  GameState.h  GameView.cpp  GameView.h  oldGame.cpp  oldGame.h
src/IO/: CLIBoardRenderer.cpp  CLIBoardRenderer.h  CLICommandHandler.cpp  CLICommandHandler.h  CLIInputProcessor.cpp  CLIInputProcessor.h  CLIRenderer.cpp  CLIRenderer.h  InputProcessor.cpp  InputProcessor.h  OutputProcessor.cpp  OutputProcessor.h
src/Players/: ComputerPlayer.cpp  ComputerPlayer.h  UserPlayer.cpp  UserPlayer.h
src/Skills/: Bombing.cpp  Bombing.h  DoubleDamage.cpp  DoubleDamage.h  ISkill.h  Scanner.cpp  Scanner.h
